--- a/work.html
+++ b/work.html
@@ -105,7 +105,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© No title | Website created with inspiration by Midnight</p>
       </div>
     </div>
   </div>
