--- a/works.html
+++ b/works.html
@@ -115,8 +115,8 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>look look look at this</h3>
+                      <p>im awestruck.</p>
                       <a href="./work.html" class="btn btn-default">Enter her zone</a>
                     </div>
                   </div>
@@ -126,8 +126,8 @@
                       </a>
                       <div class="card-container">
                         <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                        <h3>lookee this</h3>
+                        <p>im astounded.</p>
                         <a href="./work.html" class="btn btn-default">Absorb her spirit</a>
                       </div>
                     </div>
@@ -138,8 +138,8 @@
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                        <h3>lookee this once more</h3>
+                        <p>i'm amazed.</p>
                         <a href="./work.html" class="btn btn-default">Mirror her</a>
                       </div>
                     </div>
